--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -2,4 +2,9 @@
 # See https://github.com/svenfuchs/rails-i18n/tree/master/rails%2Flocale for starting points.
 
 en:
+  simple_form:
+    placeholders:
+      article:
+        title: New Task
+
   hello: "Hello world"
